Following issues are fixed: 1) Table Caption Allignment issue. 2) PickUpDate dialog Wide spacing issue 3) Select time is with select date now. 4) CheckBoxes Font weight issue

--- a/EventCombo/Content/AMaterial/docs.css
+++ b/EventCombo/Content/AMaterial/docs.css
@@ -1155,13 +1155,13 @@ md-dialog {
 }
 .firstdiv, .seconddiv {
    
-    float: left;
+  
     color: rgba(0, 0, 0, 0.87) !important;
 }
 .thirddiv {
     clear: both;
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 30px;
 }
 .firstdiv.second-tab {
     width: 40%;
